<resources>
    <string name="app_name" translatable="false">Encryption reference</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_theory">Theory</string>
    <string name="menu_crypto">Cryptography</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_qr_scanner">QR Scanner</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_about">About</string>
    <string name="settings_titleGeneral">General</string>
    <string name="settings_titleOptional">Optional</string>
    <string name="settings_spinner_lang_En">English</string>
    <string name="settings_spinner_lang_Ru">Russia</string>
    <string name="settings_spinner_systemic">Systemic</string>
    <string name="settings_uploaded">Data uploaded</string>
    <string name="settings_enterLog">Enter Log</string>
    <string name="settings_titlePermManag">Permission Management</string>
    <string name="settings_camera">Camera</string>
    <string name="settings_intMemory">Internal Memory</string>
    <string name="settings_connectMC">Connect MC</string>
    <string name="setting_titleDev">For the developer</string>
    <string name="setLocaleChan">Application localization changed</string>
    <string name="crypto_titleEncrypt">Encrypt</string>
    <string name="crypto_titleDecrypt">Decrypt</string>
    <string name="crypto_titleMethod">Method</string>
    <string name="crypto_titleKey">Key</string>
    <string name="crypto_titleEncryptText">Encrypted Text</string>
    <string name="crypto_titleDecryptText">Decrypted Text</string>
    <string name="crypto_titleClear">Clear</string>
    <string name="incorrectKey">Key entered incorrectly</string>
    <string name="error_enterQR">Enter text to display QR code</string>
    <string name="copyBuf">Data copied to clipboard</string>
    <string name="clearForm">Form cleared</string>
    <string name="crypto_helpEnterKey">Enter the key for cryptography</string>
    <string name="crypto_helpEnterOpenText">Enter the public text</string>
    <string name="crypto_helpEnterCloseText">Enter the private text</string>
    <string name="crypto_helpEnterText">Enter text</string>
    <string name="qrScanner_scan">Scan</string>
    <string name="qrScanner_create">Create</string>
    <string name="parsing_AES" translatable="false">Advanced_Encryption_Standard</string>
    <string name="parsing_DES" translatable="false">Data_Encryption_Standard</string>
    <string name="parsing_DSA" translatable="false">Digital_Signature_Algorithm</string>
    <string name="parsing_RC4" translatable="false">RC4</string>
    <string name="parsing_RSA" translatable="false">RSA_(cryptosystem)</string>
    <string name="parsing_TripleDes" translatable="false">Triple_DES</string>
    <string name="parsing_Atbash" translatable="false">Atbash</string>
    <string name="parsing_Vigener" translatable="false">Vigenere</string>
    <string name="parsing_Xor" translatable="false">XOR_cipher</string>
    <string name="parsing_Gost_28147_89" translatable="false">GOST_(block_cipher)</string>
    <string name="parsing_Polybius" translatable="false">Polybius_square</string>
    <string name="parsing_Morse" translatable="false">Morse_code</string>
    <string name="parsing_Moon" translatable="false">Moon_type</string>
    <string name="parsing_Hill" translatable="false">Hill_cipher</string>
    <string name="parsing_Caesar" translatable="false">Caesar_cipher</string>
    <string name="parsing_Playfair" translatable="false">Playfair_cipher</string>
    <string name="parsing_Shannon_Fano" translatable="false">Shannon–Fano_coding</string>
    <string name="parsing_Mirror" translatable="false">Mirror</string>
    <string name="toast_savedImage">Images saved Successfully</string>
    <string name="toast_notSavedImage">Images not Saved</string>
    <string name="about_titleFeedback">Send Feedback</string>
    <string name="about_hintFeedback">Help us make app better</string>
    <string name="about_intro">Intro</string>
    <string name="about_hintIntro">Show application hints</string>
    <string name="about_copyright" translatable="false">Copyright © Evdokimov Andrey</string>
    <string name="about_opedDM">Open developer mode</string>
    <string name="about_closeDM">Close developer mode</string>
    <string name="about_app_version">App version</string>
    <string name="about_feedback_mail" translatable="false">evdokimov1220@yahoo.com</string>
    <string name="nextShowIntro">Click to continue</string>
    <string name="tempUnav">Feature temporarily unavailable</string>
    <string name="theory_AES_head">
        AES is a symmetric block cipher adopted as an encryption standard by the US government as a result of the AES competition.
        This algorithm has been well analyzed and is now widely used, as was the case with its predecessor DES.
        The US National Institute of Standards and Technology published the AES specification on November 26, 2001, after a five-year
        period during which 15 candidates were created and evaluated. On May 26, 2002, AES was announced as the encryption standard.
        As of 2009, AES is one of the most widely used symmetric encryption algorithms. Support for AES acceleration was introduced by Intel
        to the x86 processor family starting with the Arrandale in 2010 and later on the Sandy Bridge processors; AMD has been with Bulldozer since 2011.
    </string>
    <string name="theory_AES_history">
        On January 2, 1997, NIST announces its intention to select a successor to DES, which has been the American standard since 1977. On October 2, 2000,
        it was announced that the winner of the competition was the Rijndael algorithm, and the standardization procedure began. On February 28, 2001, the draft
        was published, and on November 26, 2001, AES was accepted as FIPS 197. A historical retrospective of the competition can be found on the NIST website.
    </string>
    <string name="theory_AES_encryption">
        AES is a standard based on the Rijndael algorithm. For AES, the length of input and State is constant and equal to 128 bits, and the length of the cipher key K is 128,
        192, or 256 bits. At the same time, the original Rijndael algorithm allows a key length and block size from 128 to 256 bits with a step of 32 bits. To denote the
        selected lengths of input, State and Cipher Key in 32-bit words, the notation Nb = 4 for input and State, Nk = 4, 6, 8 for Cipher Key, respectively, is used for different key lengths.
        At the beginning of encryption, input is copied to the State array according to the rule state[r,c]=input[r+4c]. After that, the AddRoundKey() procedure is applied to the State,
        and then the State goes through the transformation procedure (round) 10, 12, or 14 times (depending on the key length), while taking into account that the last round is slightly different from
        the previous ones. As a result, after the completion of the last round of transformation, the State is copied to output according to the rule output[r+4c]=state[r,c].
        Separate transformations SubBytes(), ShiftRows(), MixColumns() and AddRoundKey() handle the State. Array w[] - contains the key schedule.
    </string>
    <string name="theory_AES_cryptographic_strength">
        In June 2003, the US National Security Agency determined that the AES cipher was strong enough to be used to protect government secrets. Up to the SECRET level, it was allowed to use 128-bit keys;
        for the TOP SECRET level, 192 and 256-bit keys were required.
    </string>
    <string name="theory_DES_head">
        DES (Data Encryption Standard) is an algorithm for symmetric encryption developed by IBM and approved by the US government in 1977 as an official standard (FIPS 46-3). The block size for DES is 64 bits.
        The algorithm is based on a Feistel network with 16 cycles (rounds) and a 56-bit key. The algorithm uses a combination of non-linear (S-boxes) and linear (E, IP, IP-1 permutations) transformations.
        A direct development of DES is currently the Triple DES (3DES) algorithm. In 3DES, encryption/decryption is performed by running the DES algorithm three times.
    </string>
    <string name="theory_DES_history">
        In 1972, a study of the US government`s need for computer security was conducted. The American "National Bureau of Standards" (NBS) (now known as NIST - "National Institute of Standards and Technology")
        identified the need for a government-wide standard for encrypting non-critical information.
        The NBS consulted with the NSA (US National Security Agency) and on May 15, 1973, announced the first competition for the creation of a cipher. Strict requirements for the new cipher were formulated.
        IBM entered the competition with a cipher it had developed called "Lucifer". The ciphers of none of the contestants (including "Lucifer") did not ensure the fulfillment of all requirements. During 1973-1974,
        IBM finalized its "Lucifer": it was based on the Horst Feistel algorithm created earlier. On August 27, 1974, the second competition began. This time the cipher "Lucifer" was considered acceptable.
        On March 17, 1975, the proposed DES algorithm was published in the Federal Register. In 1976, two public symposiums were held to discuss DES. At the symposiums, changes made to the algorithm by the NSA were heavily
        criticized. The NSA reduced the original key length and S-boxes (substitution boxes), whose design criteria were not disclosed. The NSA was suspected of deliberately weakening the algorithm so that the NSA could easily view encrypted messages.
    </string>
    <string name="theory_DES_cryptographic_strength">
        In 1990, Eli Biham and Adi Shamir conducted independent research on differential cryptanalysis, the main method for breaking block symmetric encryption algorithms. These studies removed some of the suspicions about the hidden weakness of S-permutations.
        S-boxes of the DES algorithm turned out to be much more resistant to attacks than if they were randomly chosen. This means that this analysis technique was known to the NSA as early as the 1970s. The DES algorithm was "hacked" in 39 days using a huge network of tens of thousands of computers.
        Public organization "EFF", dealing with the problems of information security and personal privacy on the Internet, initiated a study "DES Challenge II" in order to identify problems with DES. As part of the study, RSA Laboratory employees built a $250,000 supercomputer. In 1998, the supercomputer
        decrypted DES-encoded data using a 56-bit key in less than three days. The supercomputer was named "EFF DES Cracker". Specially for this occasion, scientists organized a press conference and spoke with concern that attackers are unlikely to miss the opportunity to take advantage of such a vulnerability.
        Some government officials and experts have argued that cracking the DES code requires a multi-million dollar supercomputer. "It's time for the government to recognize the insecurity of DES and support the creation of a stronger encryption standard," said EFF President Barry Steinhardt. Export restrictions
        imposed by the US government apply to encryption technologies with keys longer than 40 bits. However, as the results of the RSA Laboratory experiment showed, there is a possibility of hacking even more powerful code.
    </string>
</resources>