<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/bottom_indent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonIconApp"
            android:layout_width="@dimen/iconApp_layout"
            android:layout_height="@dimen/iconApp_layout"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:hapticFeedbackEnabled="false"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView_nameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/button_version"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="version(hardcode)"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/button_intro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/about_intro"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/button_sendFeedback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/about_titleFeedback"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/bottom_indent"
        android:text="@string/about_copyright"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>